@@ -17,8 +17,6 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
-/*#define DEBUG 1*/
-
 typedef struct
 {
   const char *name;
@@ -363,18 +361,10 @@ test_fdf(const gsl_multifit_fdfsolver_type * T, const double xtol,
   else
     gsl_multifit_fdfsolver_set(s, fdf, x0);
 
-#ifdef DEBUG
-  printf("testing %s/%s...", sname, pname, x0_scale);
-#endif
-
   status = gsl_multifit_fdfsolver_driver(s, max_iter, xtol, gtol,
                                          ftol, &info);
   gsl_test(status, "%s/%s did not converge, status=%s",
            sname, pname, gsl_strerror(status));
-
-#ifdef DEBUG
-  printf("iter = %zu, info = %d\n", s->niter, info);
-#endif
 
   /* check solution */
   test_fdf_checksol(sname, pname, epsrel, s, problem);
