@@ -98,7 +98,7 @@ int
 main()
 {
   gsl_rng *r = gsl_rng_alloc(gsl_rng_default);
-  const double tol1 = 1.0e-12;
+  const double tol1 = 1.0e-8;
   const double tol2 = 1.0e-3;
 
   gsl_ieee_env_setup();
