@@ -1,5 +1,7 @@
 * What is new in gsl-2.0:
 
+** fixed bug #43258 for hypergeometric functions (Raymond Rogers)
+
 ** added L-curve analysis routines for linear Tikhonov regression
 
 ** add running statistics module
